Refactoring + junit tests